iFeature Pro Changelog

****************************

Version 3.0.4 (12-05-11)
-Removed cursor: pointer; from all iMenu css. 
-Fixed menu grid variable when search and home button are disabled. 

Version 3.0.3 (12-01-11)
-Various IE visual fixes.
-General bug fixes and style changes. 

Version 3.0.2 (11-30-11)
-Fix for child theme support.
-Posts with no title will now display "Untitled".
-Fixed UL styling bug. 
-PHP tag fixes for Windows Server support.
-Fixed jQuery no-conflict issue in the slider (not sure how undone).
-Fixed bug related to previous Featured Image fix.
-Fixed some theme elements not showing upon activation: header, footer, post byline elements. 
-Added fix for non-keymaster admins not having access to theme option in multisite installs. 
-Added missing No Tile option to custom backgrounds. 
-Added option to enable/disable post pagination links, fixed text overlap for long post titles. 
-Fixed slider thumbnail issue, also now hiding slider nav div if navigation disabled. 
-Adjusted several option names for more clarity. 
-Added secondary option to toggle afterfooter independent from footer. 
-Added option to toggle widget title backgrounds.
-Changed footer styling.

Version 3.0.1 (11-27-11)
-Fixed issue with galleries in single post pages. 
-Changed search result text from h2 to h3, removed unnecessary font size attribute. 
-Minor change to credit link option.
-Reduced background image file size.
-Added Dark Blue color option.
-Fixed Featured Image's showing up on single post page.

Version 3.0 (11-26-11)
-Introduction of CyberChimps Core WordPress Framework. 
-New Theme Options panel using Classy Options Framework.
-Introduction of Drag and Drop page elements. 
-Introduction of custom CSS grid.
-Added Featured Post carousel.
-New theme design, includes bordered post and page containers, modified post layout.
-Introduced the Featured Post Carousel.
-Removed SuperFish, using CSS menu. 
-Post formats support added.
-New social icon set added.