@@ -33,25 +33,25 @@ function chimps_archive_page_title() {
  	
 
 			<?php if (is_category()) { ?>
-				<h2><?php printf( __( 'Archive for the &#8216;', 'core' )); ?><?php single_cat_title(); ?><?php printf( __( '&#8217; Category:', 'core' )); ?></h2><br />
+				<h2 class="archivetitle"><?php printf( __( 'Archive for the &#8216;', 'core' )); ?><?php single_cat_title(); ?><?php printf( __( '&#8217; Category:', 'core' )); ?></h2><br />
 
 			<?php } elseif( is_tag() ) { ?>
-				<h2><?php printf( __( 'Posts Tagged &#8216;', 'core' )); ?><?php single_tag_title(); ?><?php printf( __( '&#8217;:', 'core' )); ?></h2><br />
+				<h2 class="archivetitle"><?php printf( __( 'Posts Tagged &#8216;', 'core' )); ?><?php single_tag_title(); ?><?php printf( __( '&#8217;:', 'core' )); ?></h2><br />
 
 			<?php } elseif (is_day()) { ?>
-				<h2><?php printf( __( 'Archive for', 'core' )); ?> <?php the_time('F jS, Y'); ?>:</h2><br />
+				<h2 class="archivetitle"><?php printf( __( 'Archive for', 'core' )); ?> <?php the_time('F jS, Y'); ?>:</h2><br />
 
 			<?php } elseif (is_month()) { ?>
-				<h2><?php printf( __( 'Archive for', 'core' )); ?> <?php the_time('F, Y'); ?>:</h2><br />
+				<h2 class="archivetitle"><?php printf( __( 'Archive for', 'core' )); ?> <?php the_time('F, Y'); ?>:</h2><br />
 
 			<?php } elseif (is_year()) { ?>
-				<h2 class="pagetitle"><?php printf( __( 'Archive for:', 'core' )); ?> <?php the_time('Y'); ?>:</h2><br />
+				<h2 class="archivetitle"><?php printf( __( 'Archive for:', 'core' )); ?> <?php the_time('Y'); ?>:</h2><br />
 
 			<?php } elseif (is_author()) { ?>
-				<h2 class="pagetitle"><?php printf( __( 'Author Archive:', 'core' )); ?></h2><br />
+				<h2 class="archivetitle"><?php printf( __( 'Author Archive:', 'core' )); ?></h2><br />
 
 			<?php } elseif (isset($_GET['paged']) && !empty($_GET['paged'])) { ?>
-				<h2 class="pagetitle"><?php printf( __('Blog Archives:', 'core' )); ?></h2><br />
+				<h2 class="archivetitle"><?php printf( __('Blog Archives:', 'core' )); ?></h2><br />
 	
 			<?php } 
 }
