@@ -5,6 +5,8 @@ iFeature Pro Changelog
 Version 3.0.4 (12-05-11)
 -Removed cursor: pointer; from all iMenu css. 
 -Fixed menu grid variable when search and home button are disabled. 
+-Removed special charcters filter from Custom CSS option.
+-Added class to archive title H2 tags. 
 
 Version 3.0.3 (12-01-11)
 -Various IE visual fixes.
